--- a/css/main.scss
+++ b/css/main.scss
@@ -169,6 +169,16 @@ body, button {
     }
 }
 
+#main_contain {
+    & .work {
+        &_box {
+            &-text {
+                background-color: white;
+            }
+        }
+    }
+}
+
 .footer {
     text-align: center;
     padding: 1em 0 3em 0;
@@ -249,6 +259,9 @@ body, button {
             font-family: "Lora";
             padding: 4em 2em;
             background-color: $healco_green;
+            &.datadove_back {
+                background-color: #11151A;
+            }
         }
     }
     & .work {
